Renamed premium to envoy

--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -3,15 +3,15 @@
     "communityIcon": "Community icon",
     "dashboardIcon": "Dashboard icon",
     "desktopAppIcon": "Desktop App icon",
+    "envoyIcon": "Envoy icon",
     "gamesIcon": "Games icon",
     "multiplayerRobot": "Multiplayer Robot logo",
-    "premiumIcon": "Premium icon",
     "sideNavIcon": "Side nav toggle icon",
     "sideNavButton": "Toggle side nav"
   },
   "community": "Community",
   "dashboard": "Dashboard",
+  "envoy": "Envoy",
   "desktopApp": "Desktop App",
-  "games": "Games",
-  "premium": "Premium"
+  "games": "Games"
 }
