Replaced ngrx with apollo-link-state and demonstrated with theme setting

--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -2,16 +2,19 @@
   "admin": "Admin",
   "boost": "Boost",
   "community": "Community",
+  "dark": "Dark",
   "desktopApp": "Desktop App",
   "facebook": "Facebook",
   "games": "Games",
   "gitHub": "GitHub",
   "help": "Help",
+  "light": "Light",
   "loading": "Loading",
   "mainMenu": "Main Menu",
   "myGames": "My Games",
   "pageNotFound": "Page Not Found",
   "publicGames": "Public Games",
   "settings": "Settings",
+  "theme": "Theme",
   "twitter": "Twitter"
 }
