Working on data model

--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -2,7 +2,9 @@
   "admin": "Admin",
   "appearance": "Appearance",
   "authorizingDiscord": "Authorizing Discord",
+  "back": "Back",
   "boost": "Boost",
+  "comments": "Comments",
   "community": "Community",
   "connect": "Connect",
   "connectToDiscord": "Connect To Discord",
@@ -11,39 +13,49 @@
   "countryDescription": "Display your home country to other users",
   "dark": "Dark",
   "desktopApp": "Desktop App",
+  "disconnect": "Disconnect",
   "discord": "Discord",
   "email": "Email",
   "emailAddress": "Email Address",
   "emailAddressDescription": "This is where your email notifications will be sent",
   "emailDescription": "Receive notifications via email",
   "facebook": "Facebook",
+  "gameComment": "Game Comments",
   "gameEnded": "A Game Has Ended",
   "gameInvitations": "Game Invitations",
-  "games": "Games",
-  "gameComment": "Game Comments",
+  "general": "General",
   "gitHub": "GitHub",
   "help": "Help",
-  "kingDark": "King Dark",
-  "kingLight": "King Light",
+  "inGameOptions": "In-Game Options",
   "itsMyTurn": "It's My Turn",
   "iveBeenSkipped": "I've Been Skipped",
+  "joinGDM": "Join Group Messages",
+  "joinGDMDescription": "Allow Multiplayer Robot to add you to group messages for your games",
+  "kingDark": "King Dark",
+  "kingLight": "King Light",
   "light": "Light",
   "loading": "Loading",
   "mainMenu": "Main Menu",
   "myGames": "My Games",
   "notifications": "Notifications",
   "pageNotFound": "Page Not Found",
-  "privateMessageReceived": "Private Message Received",
   "playerJoinsGame": "A Player has Joined My Game",
+  "players": "Players",
+  "privateMessageReceived": "Private Message Received",
   "profile": "Profile",
   "profilePubliclyVisible": "Note that all settings in this category will be publicly visible to all Multiplayer Robot users",
   "publicGames": "Public Games",
   "resetChanges": "Reset Changes",
   "save": "Save",
+  "saveBeforeDiscordConnect": "Save or reset your changes to connect Discord",
+  "saveBeforeDiscordDisconnect": "Save or reset your changes to disconnect Discord",
   "settings": "Settings",
+  "showDiscordOnProfile": "Show On Profile",
+  "showDiscordOnProfileDescription": "Display a link to your Discord account on your public profile",
   "theme": "Theme",
   "timeZone": "Time Zone",
   "timeZoneDescription": "Used to determine the exact times for your turn timers",
+  "turns": "Turns",
   "turnTimerModified": "A Turn Timer has been Modified",
   "twitter": "Twitter",
   "typicalAvailability": "Typical Availability",
@@ -51,6 +63,7 @@
   "unspecified": "Unspecified",
   "vacationMode": "Vacation Mode",
   "vacationModeDescription": "Immediately skip all your turns in supported games",
+  "visibility": "Visibility",
   "webAppTheme": "Color Theme",
   "webAppThemeDescription": "How do you like your Multiplayer Robot?",
   "whatYouGetNotifiedAbout": "What You Get Notified About",
