Updated country flags to images and switched models to Apollo codegen

--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -4,6 +4,9 @@
   "authorizingDiscord": "Authorizing Discord",
   "back": "Back",
   "boost": "Boost",
+  "civilizationBE": "Civilization Beyond Earth",
+  "civilizationV": "Civilization V",
+  "civilizationVI": "Civilization VI",
   "comments": "Comments",
   "community": "Community",
   "connect": "Connect",
@@ -20,6 +23,7 @@
   "emailAddressDescription": "This is where your email notifications will be sent",
   "emailDescription": "Receive notifications via email",
   "facebook": "Facebook",
+  "game": "Game",
   "gameComment": "Game Comments",
   "gameEnded": "A Game Has Ended",
   "gameInvitations": "Game Invitations",
@@ -37,6 +41,7 @@
   "loading": "Loading",
   "mainMenu": "Main Menu",
   "myGames": "My Games",
+  "newGame": "New Game",
   "notifications": "Notifications",
   "pageNotFound": "Page Not Found",
   "playerJoinsGame": "A Player has Joined My Game",
