--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -4,7 +4,8 @@
   "authorizingDiscord": "Authorizing Discord",
   "back": "Back",
   "boost": "Boost",
-  "civilizationBE": "Civilization Beyond Earth",
+  "cancel": "Cancel",
+  "civilizationBE": "Civilization: Beyond Earth",
   "civilizationV": "Civilization V",
   "civilizationVI": "Civilization VI",
   "comments": "Comments",
@@ -23,6 +24,7 @@
   "emailAddressDescription": "This is where your email notifications will be sent",
   "emailDescription": "Receive notifications via email",
   "facebook": "Facebook",
+  "filter": "Filter",
   "game": "Game",
   "gameComment": "Game Comments",
   "gameEnded": "A Game Has Ended",
@@ -41,8 +43,11 @@
   "loading": "Loading",
   "mainMenu": "Main Menu",
   "myGames": "My Games",
+  "name": "Name",
   "newGame": "New Game",
   "notifications": "Notifications",
+  "ok": "Ok",
+  "other": "Other",
   "pageNotFound": "Page Not Found",
   "playerJoinsGame": "A Player has Joined My Game",
   "players": "Players",
